<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poke2"
        android:onClick="sonidoSwampert"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:srcCompat="@mipmap/swampert"
        tools:srcCompat="@mipmap/swampert" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poke1"
        android:onClick="sonidoSerperior"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:srcCompat="@mipmap/serperior"
        tools:srcCompat="@mipmap/serperior" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poke4"
        android:onClick="sonidoArticuno"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/articuno"
        tools:srcCompat="@mipmap/articuno" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poke7"
        android:onClick="sonidoGoodra"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/goodra"
        tools:srcCompat="@mipmap/goodra" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poke8"
        android:onClick="sonidoBidoof"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/bidoof"
        tools:srcCompat="@mipmap/bidoof" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poke9"
        android:onClick="sonidoPrimarina"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/primarina"
        tools:srcCompat="@mipmap/primarina" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poke5"
        android:onClick="sonidoPikachu"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/pikachu"
        tools:srcCompat="@mipmap/pikachu" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poke6"
        android:onClick="sonidoLugia"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/lugia"
        tools:srcCompat="@mipmap/lugia" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poke3"
        android:onClick="sonidoLuxray"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:srcCompat="@mipmap/luxray"
        tools:srcCompat="@mipmap/luxray" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/texto"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/texto" />

</android.support.constraint.ConstraintLayout>